--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -94,8 +94,9 @@
         // };
         
      </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
-   
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script> -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script src="./githubapi1.js"></script>
    
     <!-- <script src="./codeforcesapi.js"></script> -->
